<resources>
    <string name="app_name">FamilyMap</string>
    <string name="server_host">Server Host:</string>
    <string name="port">Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">m</string>
    <string name="female">f</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="mapFragmentMessage">This where the event data will go</string>
    <string name="searchMenu">Search</string>
    <string name="settingMenu">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="lifeStorySetting">Life Story Lines</string>
    <string name="lifeStoryDescription">Show life story lines</string>
    <string name="familyTreeSetting">Family Tree Lines</string>
    <string name="familyTreeDescription">Show family tree lines</string>
    <string name="spouseLineSetting">Spouse Lines</string>
    <string name="spouseLineDescription">Show spouse lines</string>
    <string name="fatherSideSetting">Father\'s Side</string>
    <string name="fatherSideDescription">Filter by father\'s side of family</string>
    <string name="motherSideSetting">Mother\'s Side</string>
    <string name="motherSideDescription">Filter by mother\'s side of family</string>
    <string name="maleSetting">Male Events</string>
    <string name="maleDescription">Filter events based on gender</string>
    <string name="femaleSetting">Female Events</string>
    <string name="femaleDescription">Filter events based on gender</string>
    <string name="logout">Logout</string>
    <string name="logoutDescription">Return to Login Screen</string>
    <string name="first_fragment_label">I dont know where this is used</string>
    <string name="second_fragment_label">I dont know where this is used either</string>
    <string name="starting_map_event">Click on a marker to see event details</string>
    <string name="firstNamePerson">First Name</string>
    <string name="lastNamePerson">Last Name</string>
    <string name="genderPerson">Gender</string>
    <string name="lifeEventsDropdown">Life Events</string>
    <string name="familyDropdown">Family</string>
</resources>